# advent_of_code

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
src/: day01.py  main.py
src/challenges/: day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day_template.py
src/config/: __init__.py  config.yaml
src/puzzles_2023/: day01.py  day02.py
src/puzzles_2024/: day01.py
